ZCS-12034: Add translations for ZCS-11933,ZCS-11910, ZCS-11886, ZCS-11808

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2302,6 +2302,8 @@ ss_inactive_accounts_30 = Comptes inactius (30 dies)
 ss_inactive_accounts_90 = Comptes inactius (90 dies)
 
 #Busy Messages
+BUSY_LOADING = Carregant...
+BUSY_VALIDATING = S\u0027est\u00e0 validant...
 BUSY_FLUSH_CACHE_SERVER = S\u2019est\u00e0 buidant la mem\u00f2ria cau al servidor {0}
 BUSY_FLUSH_CACHE = S\u2019est\u00e0 buidant la mem\u00f2ria cau del servidor
 BUSY_SEARCHING = S\u2019est\u00e0 cercant al directori \u2026
