--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2236,6 +2236,8 @@ ss_inactive_accounts_30 = Inaktive konti (30 dage)
 ss_inactive_accounts_90 = Inaktive konti (90 dage)
 
 #Busy Messages
+BUSY_LOADING = Indl\u00e6ser...
+BUSY_VALIDATING = Validerer...
 BUSY_FLUSH_CACHE_SERVER = T\u00f8mmer cache p\u00e5 server {0}
 BUSY_FLUSH_CACHE = T\u00f8mmer server-cache
 BUSY_SEARCHING = Gennems\u00f8ger bibliotek...
