--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2270,6 +2270,8 @@ ss_inactive_accounts_30 = Inaktive Accounts (30 Tage)
 ss_inactive_accounts_90 = Inaktive Accounts (90 Tage)
 
 #Busy Messages
+BUSY_LOADING = Wird geladen...
+BUSY_VALIDATING = Validierung...
 BUSY_FLUSH_CACHE_SERVER = Flush f\u00fcr Cache auf Server {0} wird durchgef\u00fchrt
 BUSY_FLUSH_CACHE = Flush f\u00fcr Servercache wird durchgef\u00fchrt
 BUSY_SEARCHING = Verzeichnis wird durchsucht...
