--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2280,6 +2280,8 @@ ss_inactive_accounts_30 = Cuentas inactivas (30 d\u00edas)
 ss_inactive_accounts_90 = Cuentas inactivas (90 d\u00edas)
 
 #Busy Messages
+BUSY_LOADING = Cargando...
+BUSY_VALIDATING = Validando...
 BUSY_FLUSH_CACHE_SERVER = Liberar memoria cach\u00e9 en el servidor {0}
 BUSY_FLUSH_CACHE = Liberar cach\u00e9 en el servidor
 BUSY_SEARCHING = Buscando en el directorio\u2026
