--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2297,6 +2297,8 @@ ss_inactive_accounts_30 = Kontu inaktiboak (30 egun)
 ss_inactive_accounts_90 = Kontu inaktiboak (90 egun)
 
 #Busy Messages
+BUSY_LOADING = Kargatzen...
+BUSY_VALIDATING = Balioztatzen...
 BUSY_FLUSH_CACHE_SERVER = Askatu cache memoria zerbitzarian {0}
 BUSY_FLUSH_CACHE = Askatu cachea zerbitzarian...
 BUSY_SEARCHING = Direktorioan bilatzen...
