--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = Comptes inactifs (30 jours)
 ss_inactive_accounts_90 = Comptes inactifs (90 jours)
 
 #Busy Messages
+BUSY_LOADING = Chargement...
+BUSY_VALIDATING = Validation...
 BUSY_FLUSH_CACHE_SERVER = Vidage du cache du serveur {0}
 BUSY_FLUSH_CACHE = Vidage du cache du serveur
 BUSY_SEARCHING = Recherche dans le dossier...
