--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2314,6 +2314,8 @@ ss_inactive_accounts_30 = Inactive Accounts (30 days)
 ss_inactive_accounts_90 = Inactive Accounts (90 days)
 
 #Busy Messages
+BUSY_LOADING = U\u010ditavam...
+BUSY_VALIDATING = Provjera...
 BUSY_FLUSH_CACHE_SERVER = Flushing cache on server {0}
 BUSY_FLUSH_CACHE = Flushing server cache
 BUSY_SEARCHING = Searching directory...
