--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = Inakt\u00edv fi\u00f3kok (30 nap)
 ss_inactive_accounts_90 = Inakt\u00edv fi\u00f3kok (90 nap)
 
 #Busy Messages
+BUSY_LOADING = \u00c9rv\u00e9nyesít\u00e9s folyamatban...
+BUSY_VALIDATING = \u00c9rv\u00e9nyesít\u00e9s folyamatban...
 BUSY_FLUSH_CACHE_SERVER = Gyors\u00edt\u00f3t\u00e1r \u00fcr\u00edt\u00e9se folyamatban a(z) {0} kiszolg\u00e1l\u00f3n
 BUSY_FLUSH_CACHE = Kiszolg\u00e1l\u00f3 gyors\u00edt\u00f3t\u00e1r\u00e1nak \u00fcr\u00edt\u00e9se folyamatban
 BUSY_SEARCHING = Keres\u00e9s a c\u00edmt\u00e1rban...
