--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2308,6 +2308,8 @@ ss_inactive_accounts_30 = Akun Tidak Aktif (30 hari)
 ss_inactive_accounts_90 = Akun Tidak Aktif (90 hari)
 
 #Busy Messages
+BUSY_LOADING = Memuat...
+BUSY_VALIDATING = Memvalidasi...
 BUSY_FLUSH_CACHE_SERVER = Membersihkan cache pada server {0}
 BUSY_FLUSH_CACHE = Membersihkan cache server
 BUSY_SEARCHING = Mencari direktori...
