--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2236,6 +2236,8 @@ ss_inactive_accounts_30 = Account inattivi (30 giorni)
 ss_inactive_accounts_90 = Account inattivi (90 giorni)
 
 #Busy Messages
+BUSY_LOADING = Caricamento in corso...
+BUSY_VALIDATING = Convalida...
 BUSY_FLUSH_CACHE_SERVER = Flush cache sul server {0}
 BUSY_FLUSH_CACHE = Flush cache server
 BUSY_SEARCHING = Ricerca directory...
