--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2258,6 +2258,8 @@ ss_inactive_accounts_30 = \u4f7f\u7528\u3055\u308c\u3066\u3044\u306a\u3044\u30a2
 ss_inactive_accounts_90 = \u4f7f\u7528\u3055\u308c\u3066\u3044\u306a\u3044\u30a2\u30ab\u30a6\u30f3\u30c8\uff0890\u65e5\u9593\uff09
 
 #Busy Messages
+BUSY_LOADING = \u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059\u002e\u002e\u002e
+BUSY_VALIDATING = \u691c\u8a3c\u4e2d\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = {0}\u30b5\u30fc\u30d0\u30fc\u4e0a\u306e\u30ad\u30e3\u30c3\u30b7\u30e5\u3092\u30d5\u30e9\u30c3\u30b7\u30e5\u4e2d
 BUSY_FLUSH_CACHE = \u30b5\u30fc\u30d0\u30fc\u30ad\u30e3\u30c3\u30b7\u30e5\u3092\u30d5\u30e9\u30c3\u30b7\u30e5\u4e2d
 BUSY_SEARCHING = \u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u691c\u7d22\u4e2d...
