--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2249,6 +2249,8 @@ ss_inactive_accounts_30 = \ube44\ud65c\uc131 \uacc4\uc815(30\uc77c)
 ss_inactive_accounts_90 = \ube44\ud65c\uc131 \uacc4\uc815(90\uc77c)
 
 #Busy Messages
+BUSY_LOADING = \ub85c\ub4dc \uc911\u002e\u002e\u002e
+BUSY_VALIDATING = \ud655\uc778 \uc911\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = {0} \uc11c\ubc84\uc758 \uce90\uc2dc \ud50c\ub7ec\uc2dc \uc911
 BUSY_FLUSH_CACHE = \uc11c\ubc84 \uce90\uc2dc \ud50c\ub7ec\uc2dc \uc911
 BUSY_SEARCHING = \ub514\ub809\ud130\ub9ac \uac80\uc0c9 \uc911...
