--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = Akaun Tidak Aktif (30 hari)
 ss_inactive_accounts_90 = Akaun Tidak Aktif (90 hari)
 
 #Busy Messages
+BUSY_LOADING = Memuatkan...
+BUSY_VALIDATING = Mengesahkan...
 BUSY_FLUSH_CACHE_SERVER = Mengosongkan cache pada pelayan {0}
 BUSY_FLUSH_CACHE = Mengosongkan cache pelayan
 BUSY_SEARCHING = Menggelintar direktori...
