--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2236,6 +2236,8 @@ ss_inactive_accounts_30 = Niet-actieve accounts (30 dagen)
 ss_inactive_accounts_90 = Niet-actieve accounts (90 dagen)
 
 #Busy Messages
+BUSY_LOADING = Bezig met laden...
+BUSY_VALIDATING = Valideren...
 BUSY_FLUSH_CACHE_SERVER = Bezig met leegmaken cache op server {0}
 BUSY_FLUSH_CACHE = Bezig met leegmaken servercache
 BUSY_SEARCHING = Bezig met zoeken naar directory...
