--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2309,6 +2309,8 @@ ss_inactive_accounts_30 = Inaktive kontoer (30 dager)
 ss_inactive_accounts_90 = Inaktive kontoer (90 dager)
 
 #Busy Messages
+BUSY_LOADING = Laster inn...
+BUSY_VALIDATING = Validerer...
 BUSY_FLUSH_CACHE_SERVER = T\u00f8mmer hurtigbufferen p\u00e5 serveren {0}
 BUSY_FLUSH_CACHE = T\u00f8mmer serverbufferen
 BUSY_SEARCHING = S\u00f8ker i katalog\u00a0...
