--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2295,6 +2295,8 @@ ss_inactive_accounts_30 = Konta nieaktywne (30 dni)
 ss_inactive_accounts_90 = Konta nieaktywne (90 dni)
 
 #Busy Messages
+BUSY_LOADING = \u0141adowanie...
+BUSY_VALIDATING = Weryfikowanie...
 BUSY_FLUSH_CACHE_SERVER = Oczyszczanie pami\u0119ci podr\u0119cznej na serwerze {0}
 BUSY_FLUSH_CACHE = Oczyszczanie pami\u0119ci podr\u0119cznej serwera
 BUSY_SEARCHING = Wyszukiwanie w katalogu...
