--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -2309,6 +2309,8 @@ ss_inactive_accounts_30 = Contas inativas (30 dias)
 ss_inactive_accounts_90 = Contas inativas (90 dias)
 
 #Busy Messages
+BUSY_LOADING = Carregando...
+BUSY_VALIDATING = Validando...
 BUSY_FLUSH_CACHE_SERVER = A esvaziar cache no servidor {0}
 BUSY_FLUSH_CACHE = A esvaziar cache do servidor
 BUSY_SEARCHING = A pesquisar diret\u00f3rio...
