--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2235,6 +2235,8 @@ ss_inactive_accounts_30 = Contas inativas (30 dias)
 ss_inactive_accounts_90 = Contas inativas (90 dias)
 
 #Busy Messages
+BUSY_LOADING = \u0141adowanie...
+BUSY_VALIDATING = Weryfikowanie...
 BUSY_FLUSH_CACHE_SERVER = Esvaziar cache no servidor {0}
 BUSY_FLUSH_CACHE = Esvaziando o cache do servidor
 BUSY_SEARCHING = Buscando diret\u00f3rio...
