--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = Conturi inactive (30 de zile)
 ss_inactive_accounts_90 = Conturi inactive (90 de zile)
 
 #Busy Messages
+BUSY_LOADING = Se \u00eencarc\u0103...
+BUSY_VALIDATING = Se valideaz\u0103...
 BUSY_FLUSH_CACHE_SERVER = Se gole\u015fte cache-ul de pe server {0}
 BUSY_FLUSH_CACHE = Se gole\u015fte cache-ul serverului
 BUSY_SEARCHING = Se caut\u0103 \u00een director...
