--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = Neaktivni ra\u010duni (30 dni)
 ss_inactive_accounts_90 = Neaktivni ra\u010duni (90 dni)
 
 #Busy Messages
+BUSY_LOADING = Nalaganje...
+BUSY_VALIDATING = Potrjevanje ...
 BUSY_FLUSH_CACHE_SERVER = Izprazni predpomnilnik na stre\u017eniku {0}
 BUSY_FLUSH_CACHE = Izpraznitev predpomnilnika stre\u017enika
 BUSY_SEARCHING = Iskanje po imeniku ...
