--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2236,6 +2236,8 @@ ss_inactive_accounts_30 = Inaktiva konton (30 dagar)
 ss_inactive_accounts_90 = Inaktiva konton (90 dagar)
 
 #Busy Messages
+BUSY_LOADING = L\u00e4ser in...
+BUSY_VALIDATING = Validerar...
 BUSY_FLUSH_CACHE_SERVER = T\u00f6mmer cache p\u00e5 servern {0}
 BUSY_FLUSH_CACHE = T\u00f6mmer servercache
 BUSY_SEARCHING = S\u00f6ker i katalog...
