--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2300,6 +2300,8 @@ ss_inactive_accounts_30 = Etkin Olmayan Hesaplar (30 g\u00fcn)
 ss_inactive_accounts_90 = Etkin Olmayan Hesaplar (90 g\u00fcn)
 
 #Busy Messages
+BUSY_LOADING = Y\u00fckleniyor...
+BUSY_VALIDATING = Do\u011frulan\u0131yor...
 BUSY_FLUSH_CACHE_SERVER = {0} sunucusu \u00fczerindeki \u00f6nbellek temizleniyor
 BUSY_FLUSH_CACHE = Sunucu \u00f6nbelle\u011fi temizleniyor
 BUSY_SEARCHING = Dizin aran\u0131yor...
