--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2302,6 +2302,8 @@ ss_inactive_accounts_30 = \u975e\u4f5c\u7528\u4e2d\u5e33\u6236 (30 \u5929)
 ss_inactive_accounts_90 = \u975e\u4f5c\u7528\u4e2d\u5e33\u6236 (90 \u5929)
 
 #Busy Messages
+BUSY_LOADING = \u6b63\u5728\u52a0\u8f09\u002e\u002e\u002e
+BUSY_VALIDATING = \u8b49\u5be6\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = \u6b63\u5728\u6e05\u9664\u4f3a\u670d\u5668 {0} \u7684\u5feb\u53d6
 BUSY_FLUSH_CACHE = \u6b63\u5728\u6e05\u9664\u4f3a\u670d\u5668\u5feb\u53d6
 BUSY_SEARCHING = \u6b63\u5728\u641c\u5c0b\u76ee\u9304...
