--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -2309,6 +2309,8 @@ ss_inactive_accounts_30 = \u0b9a\u0bc6\u0baf\u0bb2\u0bcd\u0baa\u0b9f\u0bbe\u0ba4
 ss_inactive_accounts_90 = \u0b9a\u0bc6\u0baf\u0bb2\u0bcd\u0baa\u0b9f\u0bbe\u0ba4 \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bc1\u0b95\u0bb3\u0bcd (90 \u0ba8\u0bbe\u0b9f\u0bcd\u0b95\u0bb3\u0bcd)
 
 #Busy Messages
+BUSY_LOADING = \u0b8f\u0bb1\u0bcd\u0bb1\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1\u002e\u002e\u002e
+BUSY_VALIDATING = \u0b9a\u0bb0\u0bbf\u0baa\u0bbe\u0bb0\u0bcd\u0b95\u0bcd\u0b95\u0bbf\u0bb1\u0ba4\u0bc1\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = \u0b9a\u0bc7\u0bb5\u0bc8\u0baf\u0b95\u0ba4\u0bcd\u0ba4\u0bbf\u0bb2\u0bcd \u0b89\u0bb3\u0bcd\u0bb3 \u0ba4\u0bb1\u0bcd\u0b95\u0bbe\u0bb2\u0bbf\u0b95 \u0b9a\u0bc7\u0bae\u0bbf\u0baa\u0bcd\u0baa\u0bc8 \u0ba8\u0bc0\u0b95\u0bcd\u0b95\u0bc1 {0}
 BUSY_FLUSH_CACHE = \u0b9a\u0bc7\u0bb5\u0bc8\u0baf\u0ba4\u0bcd\u0ba4\u0bbf\u0bb2\u0bcd \u0b89\u0bb3\u0bcd\u0bb3 \u0ba4\u0bb1\u0bcd\u0b95\u0bbe\u0bb2\u0bbf\u0b95 \u0b9a\u0bc7\u0bae\u0bbf\u0baa\u0bcd\u0baa\u0bc8 \u0ba8\u0bc0\u0b95\u0bcd\u0b95\u0bc1
 BUSY_SEARCHING = \u0b95\u0bcb\u0baa\u0bcd\u0baa\u0b95\u0ba4\u0bcd\u0ba4\u0bc8\u0ba4\u0bcd \u0ba4\u0bc7\u0b9f\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1...
