--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2309,6 +2309,8 @@ ss_inactive_accounts_30 = C\u00e1c t\u00e0i kho\u1ea3n kh\u00f4ng ho\u1ea1t \u01
 ss_inactive_accounts_90 = C\u00e1c t\u00e0i kho\u1ea3n kh\u00f4ng ho\u1ea1t \u0111\u1ed9ng (90 ng\u00e0y)
 
 #Busy Messages
+BUSY_LOADING = \u0110ang t\u1ea3i...
+BUSY_VALIDATING = \u0110ang x\u00e1c th\u1ef1c ...
 BUSY_FLUSH_CACHE_SERVER = X\u00f3a s\u1ea1ch b\u1ed9 nh\u1edb \u0111\u1ec7m m\u00e1y ch\u1ee7 {0}
 BUSY_FLUSH_CACHE = X\u00f3a s\u1ea1ch b\u1ed9 nh\u1edb \u0111\u1ec7m m\u00e1y ch\u1ee7
 BUSY_SEARCHING = \u0110ang t\u00ecm th\u01b0 m\u1ee5c...
