--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2291,6 +2291,8 @@ ss_inactive_accounts_30 = \u4e0d\u6d3b\u8dc3\u5e10\u6237 (30 \u5929)
 ss_inactive_accounts_90 = \u4e0d\u6d3b\u8dc3\u5e10\u6237 (90 \u5929)
 
 #Busy Messages
+BUSY_LOADING = \u6b63\u5728\u52a0\u8f7d\u002e\u002e\u002e
+BUSY_VALIDATING = \u8bc1\u5b9e\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = \u6b63\u5728\u6e05\u9664\u670d\u52a1\u5668 {0} \u7684\u9ad8\u901f\u7f13\u5b58
 BUSY_FLUSH_CACHE = \u6b63\u5728\u6e05\u9664\u670d\u52a1\u5668\u9ad8\u901f\u7f13\u5b58
 BUSY_SEARCHING = \u6b63\u5728\u641c\u7d22\u76ee\u5f55...
