ZCS-12034: added translation for hebrew

--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2304,6 +2304,8 @@ ss_inactive_accounts_30 = \u05d7\u05e9\u05d1\u05d5\u05e0\u05d5\u05ea \u05dc\u05d
 ss_inactive_accounts_90 = \u05d7\u05e9\u05d1\u05d5\u05e0\u05d5\u05ea \u05dc\u05d0-\u05e4\u05e2\u05d9\u05dc\u05d9\u05dd (90 \u05d9\u05d5\u05dd)
 
 #Busy Messages
+BUSY_LOADING = \u05d8\u05d5\u05e2\u05df\u002e\u002e\u002e
+BUSY_VALIDATING = \u05de\u05d0\u05de\u05ea\u002e\u002e\u002e
 BUSY_FLUSH_CACHE_SERVER = \u05de\u05e8\u05d5\u05e7\u05df \u05d0\u05ea \u05d4\u05de\u05d8\u05de\u05d5\u05df \u05d1\u05e9\u05e8\u05ea {0}
 BUSY_FLUSH_CACHE = \u05de\u05e8\u05d5\u05e7\u05df \u05de\u05d8\u05de\u05d5\u05df \u05e9\u05e8\u05ea
 BUSY_SEARCHING = \u05de\u05d7\u05e4\u05e9 \u05d1\u05e1\u05e4\u05e8\u05d9\u05d9\u05d4...
