ZBUG-3072: Comment added

--- a/WebRoot/messages/ZmMsg_da.properties
+++ b/WebRoot/messages/ZmMsg_da.properties
@@ -227,6 +227,7 @@ apptReminders = P\u00e5mindelse(r)
 apptReminderLabel = Vis p\u00e5mindelser:
 apptPastDueReminderLabel = Vis p\u00e5mindelser for m\u00f8der, hvor forfaldsdatoen er overskredet
 apptRemindNever = Aldrig
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = P\u00e5 begivenhedens tidspunkt
 apptRemindNDaysBefore = {0,number} {0,choice,0#dage|1#dag|2#dage} f\u00f8r
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutter|1#minut|2#minutter} f\u00f8r
