--- a/WebRoot/messages/ZmMsg_de.properties
+++ b/WebRoot/messages/ZmMsg_de.properties
@@ -241,6 +241,7 @@ apptReminders = Erinnerung(en) an Termin(e)
 apptReminderLabel = Erinnerungen anzeigen:
 apptPastDueReminderLabel = Erinnerungen f\u00fcr \u00fcberf\u00e4llige Sitzungen anzeigen
 apptRemindNever = Nie
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Zum Zeitpunkt des Ereignisses
 apptRemindNDaysBefore = {0,number} {0,choice,0#Tage|1#Tag|2#Tage} vor
 apptRemindNMinutesBefore = {0,number} {0,choice,0#Minuten|1#Minute|2#Minuten} vorher
