--- a/WebRoot/messages/ZmMsg_es.properties
+++ b/WebRoot/messages/ZmMsg_es.properties
@@ -243,6 +243,7 @@ apptReminders = Recordatorios de citas
 apptReminderLabel = Mostrar recordatorios:
 apptPastDueReminderLabel = Mostrar recordatorios para reuniones pendientes pasadas
 apptRemindNever = Nunca
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = A la hora del evento
 apptRemindNDaysBefore = {0,number} {0,choice,0#d\u00edas|1#d\u00eda|2#d\u00edas} antes
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutos|1#minuto|2#minutos} antes
