--- a/WebRoot/messages/ZmMsg_eu.properties
+++ b/WebRoot/messages/ZmMsg_eu.properties
@@ -251,6 +251,7 @@ apptReminders = Hitzorduak gogoratzeko oharrak
 apptReminderLabel = Bistaratu gogoratzeko oharrak:
 apptPastDueReminderLabel = Bistaratu gogoratzeko oharrak egiteke zeuden iraganeko bileretarako
 apptRemindNever = Inoiz ez
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Gertaeraren orduan
 apptRemindNDaysBefore = {0,number} {0,choice,0#egun|1#egun|2#egun} lehenago
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutu|1#minutu|2#minutu} lehenago
