--- a/WebRoot/messages/ZmMsg_fr.properties
+++ b/WebRoot/messages/ZmMsg_fr.properties
@@ -243,6 +243,7 @@ apptReminders = Rappel de rendez-vous
 apptReminderLabel = Afficher les rappels\u00a0:
 apptPastDueReminderLabel = Afficher des rappels pour les r\u00e9unions dont la date est d\u00e9pass\u00e9e
 apptRemindNever = Jamais
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Au moment de l\u2019\u00e9v\u00e9nement
 apptRemindNDaysBefore = {0,number} {0,choice,0#jours|1#jour|2#jours} avant
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minute|1#minute|2#minutes} avant
