--- a/WebRoot/messages/ZmMsg_hu.properties
+++ b/WebRoot/messages/ZmMsg_hu.properties
@@ -251,6 +251,7 @@ apptReminders = Tal\u00e1lkoz\u00f3 eml\u00e9keztet\u0151(k)
 apptReminderLabel = Eml\u00e9keztet\u0151k megjelen\u00edt\u00e9se:
 apptPastDueReminderLabel = Lej\u00e1rt \u00e9rtekezletek eml\u00e9keztet\u0151inek megjelen\u00edt\u00e9se
 apptRemindNever = Soha
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Az esem\u00e9ny idej\u00e9n
 apptRemindNDaysBefore = {0,number} {0,choice,0#nappal|1#nappal|2#nappal} kor\u00e1bban
 apptRemindNMinutesBefore = {0,number} {0,choice,0#perccel|1#perccel|2#perccel} kor\u00e1bban
