--- a/WebRoot/messages/ZmMsg_in.properties
+++ b/WebRoot/messages/ZmMsg_in.properties
@@ -251,6 +251,7 @@ apptReminders = Pengingat Janji Temu
 apptReminderLabel = Tampilkan pengingat:
 apptPastDueReminderLabel = Tampilkan pengingat untuk rapat yang sudah berlalu
 apptRemindNever = Tidak pernah
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Saat kejadian
 apptRemindNDaysBefore = {0,number} {0,choice,0#hari|1#hari|2#hari} sebelum
 apptRemindNMinutesBefore = {0,number} {0,choice,0#menit|1#menit|2#menit} sebelum
