--- a/WebRoot/messages/ZmMsg_it.properties
+++ b/WebRoot/messages/ZmMsg_it.properties
@@ -227,6 +227,7 @@ apptReminders = Promemoria appuntamenti
 apptReminderLabel = Mostra promemoria:
 apptPastDueReminderLabel = Mostra promemoria per riunioni scadute
 apptRemindNever = Mai
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = All\u2019orario dell\u2019evento
 apptRemindNDaysBefore = {0,number} {0,choice,0#giorni|1#giorno|2#giorni} prima
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minuti|1#minuto|2#minuti} prima
