--- a/WebRoot/messages/ZmMsg_iw.properties
+++ b/WebRoot/messages/ZmMsg_iw.properties
@@ -251,6 +251,7 @@ apptReminders = \u05ea\u05d6\u05db\u05d5\u05e8\u05d5\u05ea \u05dc\u05e4\u05e2\u0
 apptReminderLabel = \u05d4\u05e6\u05d2 \u05ea\u05d6\u05db\u05d5\u05e8\u05d5\u05ea:
 apptPastDueReminderLabel = \u05d4\u05e6\u05d2 \u05ea\u05d6\u05db\u05d5\u05e8\u05d5\u05ea \u05dc\u05e4\u05d2\u05d9\u05e9\u05d5\u05ea \u05d1\u05e2\u05d1\u05e8
 apptRemindNever = \u05d0\u05e3 \u05e4\u05e2\u05dd
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u05d1\u05d6\u05de\u05df \u05d4\u05d0\u05d9\u05e8\u05d5\u05e2
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u05d9\u05de\u05d9\u05dd|1#\u05d9\u05d5\u05dd|2#\u05d9\u05de\u05d9\u05dd} \u05dc\u05e4\u05e0\u05d9
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u05d3\u05e7\u05d5\u05ea|1#\u05d3\u05e7\u05d4|2#\u05d3\u05e7\u05d5\u05ea} \u05dc\u05e4\u05e0\u05d9
