--- a/WebRoot/messages/ZmMsg_ja.properties
+++ b/WebRoot/messages/ZmMsg_ja.properties
@@ -241,6 +241,7 @@ apptReminders = \u4e88\u5b9a\u30ea\u30de\u30a4\u30f3\u30c0\u30fc
 apptReminderLabel = \u30ea\u30de\u30a4\u30f3\u30c0\u30fc\u3092\u8868\u793a\uff1a
 apptPastDueReminderLabel = \u671f\u65e5\u306e\u904e\u304e\u305f\u4e88\u5b9a\u306e\u30ea\u30de\u30a4\u30f3\u30c0\u30fc\u3092\u8868\u793a
 apptRemindNever = \u306a\u3057
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u4e88\u5b9a\u304c\u958b\u59cb\u3055\u308c\u308b\u6642
 apptRemindNDaysBefore = {0,number} \u65e5\u524d
 apptRemindNMinutesBefore = {0,number} \u5206\u524d
