--- a/WebRoot/messages/ZmMsg_ms.properties
+++ b/WebRoot/messages/ZmMsg_ms.properties
@@ -251,6 +251,7 @@ apptReminders = Peringatan Janji Temu
 apptReminderLabel = Tunjukkan peringatan:
 apptPastDueReminderLabel = Tunjukkan peringatan untuk mesyuarat lampau tempoh
 apptRemindNever = Jangan sesekali
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Pada waktu acara
 apptRemindNDaysBefore = {0,number} {0,choice,0#hari|1#hari|2#hari} sebelum
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minit|1#minit|2#minit} sebelum
