--- a/WebRoot/messages/ZmMsg_nl.properties
+++ b/WebRoot/messages/ZmMsg_nl.properties
@@ -227,6 +227,7 @@ apptReminders = Afspraakherinnering(en)
 apptReminderLabel = Herinneringen weergeven:
 apptPastDueReminderLabel = Waarschuwingen weergeven voor voorbije vergaderingen
 apptRemindNever = Nooit
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Op tijdstip van gebeurtenis
 apptRemindNDaysBefore = {0,number} {0,choice,0#dagen|1#dag|2#dagen} voor
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minuten|1#minuut|2#minuten} voor
