--- a/WebRoot/messages/ZmMsg_no.properties
+++ b/WebRoot/messages/ZmMsg_no.properties
@@ -264,6 +264,7 @@ apptReminders = Avtalep\u00e5minnelse(r)
 apptReminderLabel = Vis p\u00e5minnelser:
 apptPastDueReminderLabel =  Vis p\u00e5minnelser for m\u00f8ter som har passert forfallsdato
 apptRemindNever = Aldri
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Ved hendelsestidspunkt
 apptRemindNDaysBefore = {0,number} {0,choice,0#dager|1#dag|2#dager} f\u00f8r
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutter|1#minutt|2#minutter} f\u00f8r
