--- a/WebRoot/messages/ZmMsg_pl.properties
+++ b/WebRoot/messages/ZmMsg_pl.properties
@@ -247,6 +247,7 @@ apptReminders = Przypomnienie o terminie
 apptReminderLabel = Poka\u017c przypomnienia:
 apptPastDueReminderLabel = Wy\u015bwietl przypomnienia o przeterminowanych spotkaniach
 apptRemindNever = Nigdy
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = W chwili zdarzenia
 apptRemindNDaysBefore = {0,number} {0,choice,0#dni|1#dni|2#dni} przed
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minut\u0119|1#minut\u0119|2#minut(y)} wcze\u015bniej
