--- a/WebRoot/messages/ZmMsg_ro.properties
+++ b/WebRoot/messages/ZmMsg_ro.properties
@@ -251,6 +251,7 @@ apptReminders = Memento \u00eent\u00e2lnire
 apptReminderLabel = Afi\u015fare mementouri:
 apptPastDueReminderLabel = Afi\u015fare mementouri pentru \u015fedin\u0163e \u00eencepute
 apptRemindNever = Niciodat\u0103
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = La ora evenimentului
 apptRemindNDaysBefore = cu {0,number} {0,choice,0#zile|1#zi|2#zile} \u00eenainte
 apptRemindNMinutesBefore = cu {0,number} {0,choice,0#minute|1#minut|2#minute} \u00eenainte
