--- a/WebRoot/messages/ZmMsg_ru.properties
+++ b/WebRoot/messages/ZmMsg_ru.properties
@@ -227,6 +227,7 @@ apptReminders = \u041d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u04
 apptReminderLabel = \u041f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\u0442\u044c \u043d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u044f:
 apptPastDueReminderLabel = \u041f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\u0442\u044c \u043d\u0430\u043f\u043e\u043c\u0438\u043d\u0430\u043d\u0438\u044f \u0434\u043b\u044f \u043f\u0440\u043e\u0441\u0440\u043e\u0447\u0435\u043d\u043d\u044b\u0445 \u0441\u043e\u0431\u0440\u0430\u043d\u0438\u0439
 apptRemindNever = \u041d\u0438\u043a\u043e\u0433\u0434\u0430
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u0412\u043e \u0432\u0440\u0435\u043c\u044f \u0441\u043e\u0431\u044b\u0442\u0438\u044f
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0434\u043d\u0435\u0439|1#\u0434\u0435\u043d\u044c|2#\u0434\u043d\u044f} \u043f\u0435\u0440\u0435\u0434
 apptRemindNMinutesBefore = \u0417\u0430 {0,number} {0,choice,0#\u043c\u0438\u043d|1#\u043c\u0438\u043d|2#\u043c\u0438\u043d} \u0434\u043e
