--- a/WebRoot/messages/ZmMsg_sl.properties
+++ b/WebRoot/messages/ZmMsg_sl.properties
@@ -251,6 +251,7 @@ apptReminders = Opomnik(i) za sestanek
 apptReminderLabel = Poka\u017ei opomnike:
 apptPastDueReminderLabel = Poka\u017ei opomnike za pretekla sre\u010danja
 apptRemindNever = Nikoli
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = V \u010dasu dogodka
 apptRemindNDaysBefore = {0,number} {0,choice,0#dni|1#dan|2#dni} prej
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minut|1#minuto|2#minut} prej
