--- a/WebRoot/messages/ZmMsg_sv.properties
+++ b/WebRoot/messages/ZmMsg_sv.properties
@@ -227,6 +227,7 @@ apptReminders = M\u00f6tesp\u00e5minnelse(r)
 apptReminderLabel = Visa p\u00e5minnelser:
 apptPastDueReminderLabel = Visa p\u00e5minnelser f\u00f6r m\u00f6ten som har intr\u00e4ffat
 apptRemindNever = Aldrig
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = vid tiden f\u00f6r h\u00e4ndelsen
 apptRemindNDaysBefore = {0,number} {0,choice,0#dagar|1#dag|2#dagar} innan
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minuter|1#minut|2#minuter} f\u00f6re
