--- a/WebRoot/messages/ZmMsg_vi.properties
+++ b/WebRoot/messages/ZmMsg_vi.properties
@@ -264,6 +264,7 @@ apptReminders = Tr\u00ecnh nh\u1eafc cu\u1ed9c h\u1eb9n
 apptReminderLabel = Hi\u1ec3n th\u1ecb th\u00f4ng b\u00e1o nh\u1eafc:
 apptPastDueReminderLabel =  Hi\u1ec3n th\u1ecb th\u00f4ng b\u00e1o nh\u1eafc cho c\u00e1c cu\u1ed9c h\u1ecdp qu\u00e1 h\u1ea1n.
 apptRemindNever = Kh\u00f4ng bao gi\u1edd
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = T\u1ea1i th\u1eddi \u0111i\u1ec3m di\u1ec5n ra s\u1ef1 ki\u1ec7n
 apptRemindNDaysBefore = {0,number} {0,choice,0#ng\u00e0y|1#ng\u00e0y|2#ng\u00e0y} tr\u01b0\u1edbc
 apptRemindNMinutesBefore = {0,number} {0,choice,0#ph\u00fat|1#ph\u00fat|2#ph\u00fat} tr\u01b0\u1edbc
