--- a/WebRoot/messages/ZmMsg_ar.properties
+++ b/WebRoot/messages/ZmMsg_ar.properties
@@ -249,6 +249,7 @@ apptReminders = \u062a\u0630\u0643\u064a\u0631\u0627\u062a \u0628\u0627\u0644\u0
 apptReminderLabel = \u0625\u0638\u0647\u0627\u0631 \u0627\u0644\u062a\u0630\u0643\u064a\u0631\u0627\u062a:\u200f
 apptPastDueReminderLabel = \u0625\u0638\u0647\u0627\u0631 \u0627\u0644\u062a\u0630\u0643\u064a\u0631\u0627\u062a \u0644\u0644\u0627\u062c\u062a\u0645\u0627\u0639\u0627\u062a \u0627\u0644\u062a\u064a \u0641\u0627\u062a \u0648\u0642\u062a\u0647\u0627
 apptRemindNever = \u0623\u0628\u062f\u0627\u064b
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u0641\u064a \u0648\u0642\u062a \u0627\u0644\u062d\u062f\u062b
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0623\u064a\u0627\u0645|1#\u064a\u0648\u0645|2#\u0623\u064a\u0627\u0645} \u0642\u0628\u0644
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u062f\u0642\u0627\u0626\u0642|1#\u062f\u0642\u064a\u0642\u0629|2#\u062f\u0642\u0627\u0626\u0642} \u0642\u0628\u0644
