--- a/WebRoot/messages/ZmMsg_ca.properties
+++ b/WebRoot/messages/ZmMsg_ca.properties
@@ -262,6 +262,7 @@ apptReminders = Recordatoris de cites
 apptReminderLabel = Mostra recordatoris:
 apptPastDueReminderLabel =  Mostra recordatoris de reunions ven\u00e7udes
 apptRemindNever = Mai
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = En el moment de l\u2019esdeveniment
 apptRemindNDaysBefore = {0,number} {0,choice,0#dies|1#dia|2#dies} abans
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minuts|1#minut|2#minuts} abans
