--- a/WebRoot/messages/ZmMsg_hi.properties
+++ b/WebRoot/messages/ZmMsg_hi.properties
@@ -227,6 +227,7 @@ apptReminders = \u0905\u092a\u0949\u0907\u0902\u091f\u092e\u0947\u0902\u091f \u0
 apptReminderLabel = \u0930\u093f\u092e\u093e\u0907\u0902\u0921\u0930\u094d\u0938 \u0926\u093f\u0916\u093e\u090f\u0901:
 apptPastDueReminderLabel = \u092a\u093f\u091b\u0932\u0940 \u0936\u0947\u0937 \u092e\u0940\u091f\u093f\u0902\u0917\u094d\u200d\u0938 \u0915\u0947 \u0932\u093f\u090f \u0930\u093f\u092e\u093e\u0902\u0907\u0921\u0930 \u0926\u093f\u0916\u093e\u090f\u0901
 apptRemindNever = \u0915\u092d\u0940 \u0928\u0939\u0940\u0902
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u0908\u0935\u0947\u0902\u091f \u0915\u0947 \u0938\u092e\u092f
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0926\u093f\u0928|1#\u0926\u093f\u0928|2#\u0926\u093f\u0928} \u092a\u0939\u0932\u0947
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u092e\u093f\u0928\u091f|1#\u092e\u093f\u0928\u091f|2#\u092e\u093f\u0928\u091f} \u092a\u0939\u0932\u0947
