--- a/WebRoot/messages/ZmMsg_ko.properties
+++ b/WebRoot/messages/ZmMsg_ko.properties
@@ -240,6 +240,7 @@ apptReminders = \uc57d\uc18d \ubbf8\ub9ac \uc54c\ub9bc
 apptReminderLabel = \uc54c\ub9ac\ubbf8 \ud45c\uc2dc:
 apptPastDueReminderLabel = \uae30\ud55c \ucd08\uacfc \ud68c\uc758\uc5d0 \ub300\ud55c \uc54c\ub9ac\ubbf8 \ud45c\uc2dc
 apptRemindNever = \uc548 \ud568
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \uc774\ubca4\ud2b8 \uc2dc
 apptRemindNDaysBefore = {0,number} {0,choice,0#\uc77c|1#\uc77c|2#\uc77c} \uc804
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\ubd84|1#\ubd84|2#\ubd84} \uc804
