--- a/WebRoot/messages/ZmMsg_lo.properties
+++ b/WebRoot/messages/ZmMsg_lo.properties
@@ -251,6 +251,7 @@ apptReminders = \u0e81\u0eb2\u0e99\u0ec0\u0e95\u0eb7\u0ead\u0e99\u0e81\u0eb2\u0e
 apptReminderLabel = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u200b\u0e81\u0eb2\u0e99\u200b\u0ec0\u0e95\u0eb7\u0ead\u0e99:
 apptPastDueReminderLabel = \u0eaa\u0eb0\u200b\u0ec1\u0e94\u0e87\u200b\u0e81\u0eb2\u0e99\u200b\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0eb3\u200b\u0ea5\u0eb1\u0e9a\u200b\u0e81\u0eb2\u0e99\u200b\u0e9b\u0eb0\u200b\u0e8a\u0eb8\u200b\u0ea1\u200b\u0e84\u0ebb\u0e9a\u200b\u0e81\u0eb3\u200b\u0e99\u0ebb\u200b\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0ea1\u0eb2\u200b\u0ec1\u0ea5\u0ec9\u0ea7
 apptRemindNever = \u0e9a\u0ecd\u0ec8\u0ec0\u0ea5\u0eb5\u0e8d
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u0ec3\u0e99\u200b\u0ec0\u0ea7\u200b\u0ea5\u0eb2\u200b\u0e82\u0ead\u0e87\u200b\u0ec0\u0eab\u0e94\u200b\u0e81\u0eb2\u0e99
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0ea7\u0eb1\u0e99|1#\u0ea7\u0eb1\u0e99|2#\u0ea7\u0eb1\u0e99} \u0e81\u0ec8\u0ead\u0e99
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u0e99\u0eb2\u200b\u0e97\u0eb5|1#\u0e99\u0eb2\u200b\u0e97\u0eb5|2#\u0e99\u0eb2\u200b\u0e97\u0eb5} \u0e81\u0ec8\u0ead\u0e99
