--- a/WebRoot/messages/ZmMsg_pt.properties
+++ b/WebRoot/messages/ZmMsg_pt.properties
@@ -251,6 +251,7 @@ apptReminders = Lembretes de compromisso
 apptReminderLabel = Mostrar lembretes:
 apptPastDueReminderLabel =  Mostrar lembretes de reuni\u00f5es expiradas
 apptRemindNever = Nunca
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Aquando do evento
 apptRemindNDaysBefore = {0,number} {0,choice,0#dias|1#dia|2#dias} antes
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutos|1#minuto|2#minutos} antes
