--- a/WebRoot/messages/ZmMsg_pt_BR.properties
+++ b/WebRoot/messages/ZmMsg_pt_BR.properties
@@ -227,6 +227,7 @@ apptReminders = Lembrete(s) do compromisso
 apptReminderLabel = Exibir lembretes:
 apptPastDueReminderLabel = Exibir lembretes para reuni\u00f5es finalizadas
 apptRemindNever = Nunca
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Na hora do evento
 apptRemindNDaysBefore = {0,number} {0,choice,0#dias|1#dia|2#dias} antes
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutos|1#minuto|2#minutos} antes
