--- a/WebRoot/messages/ZmMsg_th.properties
+++ b/WebRoot/messages/ZmMsg_th.properties
@@ -251,6 +251,7 @@ apptReminders = \u0e15\u0e31\u0e27\u0e40\u0e15\u0e37\u0e2d\u0e19\u0e01\u0e32\u0e
 apptReminderLabel = \u0e41\u0e2a\u0e14\u0e07\u0e15\u0e31\u0e27\u0e40\u0e15\u0e37\u0e2d\u0e19:
 apptPastDueReminderLabel = \u0e41\u0e2a\u0e14\u0e07\u0e15\u0e31\u0e27\u0e40\u0e15\u0e37\u0e2d\u0e19\u0e2a\u0e33\u0e2b\u0e23\u0e31\u0e1a\u0e01\u0e32\u0e23\u0e1b\u0e23\u0e30\u0e0a\u0e38\u0e21\u0e17\u0e35\u0e48\u0e40\u0e25\u0e22\u0e01\u0e33\u0e2b\u0e19\u0e14
 apptRemindNever = \u0e44\u0e21\u0e48\u0e15\u0e49\u0e2d\u0e07
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u0e13 \u0e40\u0e27\u0e25\u0e32\u0e17\u0e35\u0e48\u0e01\u0e33\u0e2b\u0e19\u0e14
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0e27\u0e31\u0e19|1#\u0e27\u0e31\u0e19|2#\u0e27\u0e31\u0e19} \u0e01\u0e48\u0e2d\u0e19
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u0e19\u0e32\u0e17\u0e35|1#\u0e19\u0e32\u0e17\u0e35|2#\u0e19\u0e32\u0e17\u0e35} \u0e01\u0e48\u0e2d\u0e19
