--- a/WebRoot/messages/ZmMsg_tr.properties
+++ b/WebRoot/messages/ZmMsg_tr.properties
@@ -251,6 +251,7 @@ apptReminders = Randevu An\u0131msat\u0131c\u0131(lar\u0131)
 apptReminderLabel = An\u0131msat\u0131c\u0131lar\u0131 g\u00f6ster:
 apptPastDueReminderLabel = S\u00fcresi ge\u00e7mi\u015f toplant\u0131lar\u0131n an\u0131msat\u0131c\u0131lar\u0131n\u0131 g\u00f6ster
 apptRemindNever = Hi\u00e7bir zaman
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = Olay s\u0131ras\u0131nda
 apptRemindNDaysBefore = {0,number} {0,choice,0#g\u00fcn|1#g\u00fcn|2#g\u00fcn} \u00f6nce
 apptRemindNMinutesBefore = {0,number} {0,choice,0#dakika|1#dakika|2#dakika} \u00f6nce
