--- a/WebRoot/messages/ZmMsg_uk.properties
+++ b/WebRoot/messages/ZmMsg_uk.properties
@@ -251,6 +251,7 @@ apptReminders = \u041d\u0430\u0433\u0430\u0434\u0443\u0432\u0430\u043d\u043d\u04
 apptReminderLabel = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u0438 \u043d\u0430\u0433\u0430\u0434\u0443\u0432\u0430\u043d\u043d\u044f:
 apptPastDueReminderLabel = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u0438 \u043d\u0430\u0433\u0430\u0434\u0443\u0432\u0430\u043d\u043d\u044f \u043f\u0440\u043e \u043f\u0440\u043e\u0441\u0442\u0440\u043e\u0447\u0435\u043d\u0456 \u043d\u0430\u0440\u0430\u0434\u0438
 apptRemindNever = \u041d\u0456\u043a\u043e\u043b\u0438
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u041f\u0456\u0434 \u0447\u0430\u0441 \u043f\u043e\u0434\u0456\u0457
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u0434\u043d\u0456\u0432|1#\u0434\u0435\u043d\u044c|2#\u0434\u043d\u0456} \u043f\u0435\u0440\u0435\u0434
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u0445\u0432\u0438\u043b\u0438\u043d|1#\u0445\u0432\u0438\u043b\u0438\u043d\u0430|2#\u0445\u0432\u0438\u043b\u0438\u043d\u0438} \u043f\u0435\u0440\u0435\u0434
