--- a/WebRoot/messages/ZmMsg_zh_CN.properties
+++ b/WebRoot/messages/ZmMsg_zh_CN.properties
@@ -249,6 +249,7 @@ apptReminders = \u7ea6\u4f1a\u63d0\u9192
 apptReminderLabel = \u663e\u793a\u63d0\u9192\u4fe1\u606f\uff1a
 apptPastDueReminderLabel = \u663e\u793a\u8fc7\u671f\u4f1a\u8bae\u7684\u63d0\u9192\u901a\u77e5
 apptRemindNever = \u4ece\u4e0d
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u6709\u6d3b\u52a8\u65f6
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u5929|1#\u5929|2#\u5929}\u524d
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u5206|1#\u5206|2#\u5206}\u524d
