--- a/WebRoot/messages/ZmMsg_zh_HK.properties
+++ b/WebRoot/messages/ZmMsg_zh_HK.properties
@@ -235,6 +235,7 @@ apptReminders = \u9810\u7d04\u63d0\u9192
 apptReminderLabel = \u986f\u793a\u63d0\u9192\uff1a
 apptPastDueReminderLabel = \u986f\u793a\u904e\u671f\u6703\u8b70\u7684\u63d0\u9192\u901a\u77e5
 apptRemindNever = \u5f9e\u4e0d
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u6709\u6d3b\u52d5\u6642
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u5929|1#\u5929|2#\u5929} \u65e9\u65bc
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u5206|1#\u5206|2#\u5206} \u4e4b\u524d
