--- a/WebRoot/messages/ZmMsg_zh_TW.properties
+++ b/WebRoot/messages/ZmMsg_zh_TW.properties
@@ -251,6 +251,7 @@ apptReminders = \u7d04\u6703\u63d0\u9192
 apptReminderLabel = \u986f\u793a\u63d0\u9192:
 apptPastDueReminderLabel = \u986f\u793a\u903e\u671f\u6703\u8b70\u7684\u63d0\u9192\u901a\u77e5
 apptRemindNever = \u5f9e\u4e0d
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = \u6709\u6d3b\u52d5\u6642
 apptRemindNDaysBefore = {0,number} {0,choice,0#\u5929|1#\u5929|2#\u5929}\u524d
 apptRemindNMinutesBefore = {0,number} {0,choice,0#\u5206\u9418|1#\u5206\u9418|2#\u5206\u9418}\u524d
