ZBUG-2925: Updated German translation

--- a/WebRoot/messages/ZmMsg_de.properties
+++ b/WebRoot/messages/ZmMsg_de.properties
@@ -3764,8 +3764,8 @@ shareModifiedHtml = \
 	<tr><th align="right">Freigegebenes Objekt:</th><td>{0} {1}</td></tr>\n\
 	<tr><th align="right">Besitzer:</th><td>{2}</td></tr>\n\
 	<tr><th align="right">Nutzer:</th><td>{3}</td></tr>\n\
-	<tr style="color:#EB7400;"><th align="right">Rolle:</th><td>{4} [MODIFIED]</td></tr>\n\
-	<tr style="color:#EB7400;"><th align="right">Zul\u00e4ssige Aktionen:</th><td>{5} [MODIFIED]</td>\n\
+	<tr style="color:#EB7400;"><th align="right">Rolle:</th><td>{4} [GE\u00c4NDERT]</td></tr>\n\
+	<tr style="color:#EB7400;"><th align="right">Zul\u00e4ssige Aktionen:</th><td>{5} [GE\u00c4NDERT]</td>\n\
 	</tr>\n\
 	</table>\n\
 	</div>
